--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -530,7 +530,7 @@
     <string name="pt_allow_editing_external_id">Να επιτρέπεται η επεξεργασία του εγγενούς αναγνωριστικού ιστοτόπου</string>
     <string name="pt_allow_metered_network_data">Να επιτρέπεται η χρήση δεδομένων κινητής τηλεφωνίας</string>
     <string name="pt_bob_books_under_multiple_authors">Βιβλία με πολλούς συγγραφείς</string>
-    <string name="pt_bob_books_under_multiple_publisher">Εμφάνιση βιβλίων με πολλούς εκδότες</string>
+    <string name="pt_bob_books_under_multiple_publishers">Εμφάνιση βιβλίων με πολλούς εκδότες</string>
     <string name="pt_bob_books_under_multiple_series">Βιβλία σε πολλές σειρές</string>
     <string name="pt_bob_cover_long_click">Ανοίξτε το μενού περιβάλλοντος του βιβλίου.</string>
     <string name="pe_bob_cover_long_click_ignore">Με ένα κουμπί.</string>
@@ -550,7 +550,7 @@
     <string name="pt_fast_scroller_overlay">Φούσκα κειμένου κατά την κύλιση.</string>
     <string name="pt_line_spacing">Διάστιχο</string>
     <string name="pt_maintenance">Συντήρηση</string>
-    <string name="pt_primary_author_type">Κύριος τύπος συγγραφέα</string>
+    <string name="pt_main_author_type">Κύριος τύπος συγγραφέα</string>
     <string name="pt_scanning_beep_on_barcode_found">Μπιπ, όταν βρεθεί ένας γραμμωτός κώδικας</string>
     <string name="pt_scanning_beep_on_invalid">Ειδοποίηση αν ο σκαναρισμένος κωδικός ISBN δεν είναι έγκυρος</string>
     <string name="pt_scanning_beep_on_valid">Ειδοποίηση αν το σκαναρισμένο ISBN είναι έγκυρο</string>
@@ -574,12 +574,12 @@
     <string name="pt_website_search_order_and_enable">Προτεραιότητα, ενεργοποίηση και απενεργοποίηση</string>
     <string name="ps_show_author_name_family_first">Εμφανίστε πρώτα το οικογενειακό όνομα,\nγια παράδειγμα «Παλαμάς, Κωστής»</string>
     <string name="ps_show_author_name_given_first">Εμφανίζονται πρώτα τα ονόματα,\nγια παράδειγμα «Κωστής  Παλαμάς»</string>
-    <string name="ps_bob_books_under_multiple_each_author">Κάτω από κάθε συντάκτης</string>
-    <string name="ps_bob_books_under_multiple_each_publisher">κάτω από κάθε εκδότη</string>
-    <string name="ps_bob_books_under_multiple_each_series">Κάτω από κάθε Σειρά</string>
-    <string name="ps_bob_books_under_multiple_primary_author_only">Κάτω από κύρια συντάκτης μόνο</string>
-    <string name="ps_bob_books_under_multiple_primary_publisher_only">μόνο στον κύριο εκδότη τους</string>
-    <string name="ps_bob_books_under_multiple_primary_series_only">Κάτω από κύρια Σειρά μόνο</string>
+    <string name="ps_bob_books_under_multiple_authors_each">Κάτω από κάθε συντάκτης</string>
+    <string name="ps_bob_books_under_multiple_publishers_each">κάτω από κάθε εκδότη</string>
+    <string name="ps_bob_books_under_multiple_series_each">Κάτω από κάθε Σειρά</string>
+    <string name="ps_bob_books_under_multiple_authors_main_only">Κάτω από κύρια συντάκτης μόνο</string>
+    <string name="ps_bob_books_under_multiple_publishers_main_only">μόνο στον κύριο εκδότη τους</string>
+    <string name="ps_bob_books_under_multiple_series_main_only">Κάτω από κύρια Σειρά μόνο</string>
     <string name="pv_bob_header_filters">Φίλτρα</string>
     <string name="pv_bob_header_nr_of_books">Εμφάνιση αριθμού βιβλίων</string>
     <string name="pv_bob_header_style_name">Όνομα στυλ</string>
