--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -532,7 +532,7 @@
     <string name="pt_allow_editing_external_id">Consenti la modifica dell’ID libro del sito Web nativo</string>
     <string name="pt_allow_metered_network_data">Consenti l’utilizzo dei dati mobili</string>
     <string name="pt_bob_books_under_multiple_authors">Libri con autori multipli</string>
-    <string name="pt_bob_books_under_multiple_publisher">Mostra libri con più editori</string>
+    <string name="pt_bob_books_under_multiple_publishers">Mostra libri con più editori</string>
     <string name="pt_bob_books_under_multiple_series">Libri in serie multiple</string>
     <string name="pt_bob_cover_long_click">Aprire il menu contestuale del libro.</string>
     <string name="pe_bob_cover_long_click_ignore">Con un pulsante.</string>
@@ -552,7 +552,7 @@
     <string name="pt_fast_scroller_overlay">Bolla di testo durante lo scorrimento.</string>
     <string name="pt_line_spacing">Interlinea</string>
     <string name="pt_maintenance">Συντήρηση</string>
-    <string name="pt_primary_author_type">Tipo di autore principale</string>
+    <string name="pt_main_author_type">Tipo di autore principale</string>
     <string name="pt_scanning_beep_on_barcode_found">Segnale acustico quando viene trovato un codice a barre</string>
     <string name="pt_scanning_beep_on_invalid">Suona se il codice ISBN acquisito non è valido</string>
     <string name="pt_scanning_beep_on_valid">Suona se il codice ISBN acquisito è valido</string>
@@ -576,12 +576,12 @@
     <string name="pt_website_search_order_and_enable">Priorità, abilita e disabilita</string>
     <string name="ps_show_author_name_family_first">Visualizzare prima il nome della famiglia,\nes. «Alighieri, Dante»</string>
     <string name="ps_show_author_name_given_first">Visualizzare prima i nomi,\nes. «Dante Alighieri»</string>
-    <string name="ps_bob_books_under_multiple_each_author">Sotto ciascuno autore</string>
-    <string name="ps_bob_books_under_multiple_each_publisher">sotto ciascun editore</string>
-    <string name="ps_bob_books_under_multiple_each_series">Sotto ciascuno serie</string>
-    <string name="ps_bob_books_under_multiple_primary_author_only">Solo sotto autore primario</string>
-    <string name="ps_bob_books_under_multiple_primary_publisher_only">solo con il loro editore principale</string>
-    <string name="ps_bob_books_under_multiple_primary_series_only">Solo sotto serie primario</string>
+    <string name="ps_bob_books_under_multiple_authors_each">Sotto ciascuno autore</string>
+    <string name="ps_bob_books_under_multiple_publishers_each">sotto ciascun editore</string>
+    <string name="ps_bob_books_under_multiple_series_each">Sotto ciascuno serie</string>
+    <string name="ps_bob_books_under_multiple_authors_main_only">Solo sotto autore primario</string>
+    <string name="ps_bob_books_under_multiple_publishers_main_only">solo con il loro editore principale</string>
+    <string name="ps_bob_books_under_multiple_series_main_only">Solo sotto serie primario</string>
     <string name="pv_bob_header_filters">Filtri</string>
     <string name="pv_bob_header_nr_of_books">Mostra numero di libri</string>
     <string name="pv_bob_header_style_name">Nome dello stile</string>
