--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -549,7 +549,7 @@
     <string name="pt_allow_editing_external_id">Zezwalaj na edycję natywnego identyfikatora książki w witrynie</string>
     <string name="pt_allow_metered_network_data">Włącz mobilne korzystanie z danych</string>
     <string name="pt_bob_books_under_multiple_authors">Książki z wieloma autorami</string>
-    <string name="pt_bob_books_under_multiple_publisher">Pokaż książki wielu wydawcom</string>
+    <string name="pt_bob_books_under_multiple_publishers">Pokaż książki wielu wydawcom</string>
     <string name="pt_bob_books_under_multiple_series">Książki w wielu seriach</string>
     <string name="pt_bob_cover_long_click">Otwórz menu kontekstowe książki.</string>
     <string name="pe_bob_cover_long_click_ignore">Za pomocą przycisku.</string>
@@ -569,7 +569,7 @@
     <string name="pt_fast_scroller_overlay">Dymek tekstowy podczas przewijania.</string>
     <string name="pt_line_spacing">Odstępy między wierszami</string>
     <string name="pt_maintenance">Konserwacja</string>
-    <string name="pt_primary_author_type">Główny typ autora</string>
+    <string name="pt_main_author_type">Główny typ autora</string>
     <string name="pt_scanning_beep_on_barcode_found">Sygnał dźwiękowy po znalezieniu kodu kreskowego</string>
     <string name="pt_scanning_beep_on_invalid">Sygnał dźwiękowy, jeśli zeskanowany numer ISBN jest nieprawidłowy</string>
     <string name="pt_scanning_beep_on_valid">Sygnał dźwiękowy, jeśli skanowany numer ISBN jest prawidłowy</string>
@@ -590,12 +590,12 @@
     <string name="pt_website_search_order_and_enable">Priorytetowe, włącz i wyłącz</string>
     <string name="ps_show_author_name_family_first">Wyświetl najpierw nazwisko rodowe,\nnp. „Lem, Stanisław”</string>
     <string name="ps_show_author_name_given_first">Wyświetlanie z podanymi imionami w pierwszej kolejności,\nnp. „Stanisław Lem”</string>
-    <string name="ps_bob_books_under_multiple_each_author">Pod każdym autor</string>
-    <string name="ps_bob_books_under_multiple_each_publisher">pod każdym wydawcą</string>
-    <string name="ps_bob_books_under_multiple_each_series">Pod każdym seria</string>
-    <string name="ps_bob_books_under_multiple_primary_author_only">Pod głównym tylko autor</string>
-    <string name="ps_bob_books_under_multiple_primary_publisher_only">tylko u głównego wydawcy</string>
-    <string name="ps_bob_books_under_multiple_primary_series_only">Pod głównym tylko seria</string>
+    <string name="ps_bob_books_under_multiple_authors_each">Pod każdym autor</string>
+    <string name="ps_bob_books_under_multiple_publishers_each">pod każdym wydawcą</string>
+    <string name="ps_bob_books_under_multiple_series_each">Pod każdym seria</string>
+    <string name="ps_bob_books_under_multiple_authors_main_only">Pod głównym tylko autor</string>
+    <string name="ps_bob_books_under_multiple_publishers_main_only">tylko u głównego wydawcy</string>
+    <string name="ps_bob_books_under_multiple_series_main_only">Pod głównym tylko seria</string>
     <string name="pv_bob_header_filters">Filtry</string>
     <string name="pv_bob_header_nr_of_books">Liczba książek</string>
     <string name="pv_bob_header_style_name">Nazwa stylu</string>
